--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   wordpress:
     depends_on:
       - db
-    image: wordpress:5.1.1-fpm-alpine
+    image: wordpress:6.2.2-php8.1-fpm-alpine
     container_name: wordpress
     restart: unless-stopped
     env_file: .env
